[package]
name = "timms-storage"
version = "0.1.0"
edition = "2024"
authors = ["DevTimmOfTO"]
description = "Local-first household and pantry manager"
license = "AGPL-3.0-only"
repository = "https://codeberg.org/DevTimmOfTO/timms-storage"
readme = "README"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
strip = true
lto = true
